--- a/package.json
+++ b/package.json
@@ -1,10 +1,18 @@
 {
   "name": "release-upload-asset",
   "main": "dist/index.js",
+  "type": "module",
   "private": true,
-  "scripts": {},
+  "scripts": {
+    "build": "tsc"
+  },
   "devDependencies": {
+    "@octokit/webhooks-types": "^7.6.1",
     "@types/node": "^22.10.1",
     "typescript": "^5.7.2"
+  },
+  "dependencies": {
+    "@actions/core": "^1.11.1",
+    "@actions/github": "^6.0.0"
   }
 }
