--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -5,6 +5,6 @@ updates:
     schedule:
       interval: weekly
       day: monday
-      time: 06:00
+      time: "06:00"
     reviewers:
       - cloudnode-pro/development
