--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -8,3 +8,11 @@ updates:
       time: "06:00"
     reviewers:
       - cloudnode-pro/development
+  - package-ecosystem: github-actions
+    directory: /
+    schedule:
+      interval: weekly
+      day: monday
+      time: "06:00"
+    reviewers:
+      - cloudnode-pro/development
