--- a/action.yaml
+++ b/action.yaml
@@ -9,7 +9,7 @@ inputs:
     required: true
 runs:
   using: docker
-  image: Dockerfile
+  image: docker://ghcr.io/cloudnode-pro/release-upload-asset:1.0.0
   env:
     GH_INPUTS: ${{ toJSON(inputs) }}
 
